# kodex-marketplace-backend

./: .env  .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml  seed.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_phase1_schema.py  002_add_product_audit.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  agent.py  public.py
app/api/v1/admin/: __init__.py  auth.py  catalog.py
app/core/: __init__.py  auth.py  config.py  database.py
app/models/: __init__.py  catalog.py  platform.py
app/repositories/: __init__.py  admin_catalog_repo.py  offer_repo.py  product_repo.py
app/schemas/: __init__.py  admin.py  agent.py  auth.py  offer.py  product.py
app/services/: __init__.py  admin_catalog_service.py  agent_service.py  offer_service.py  product_service.py  s3_service.py
docs/: development-plan.xml  knowledge-graph.xml  requirements.xml  technology.xml  verification-plan.xml
docs/ai/: AI_WORKFLOW.md  PROMPTS.md  SESSION_EXPORTS.md
tests/: __init__.py  conftest.py  fix_future.py  fix_types.py  helpers.py  test_seed.py  test_smoke.py
tests/api/: __init__.py  test_admin_auth_api.py  test_admin_catalog_api.py  test_agent_api.py  test_app.py  test_public_api.py
tests/core/: __init__.py  test_auth.py  test_config.py  test_database.py
tests/migrations/: __init__.py  test_phase1_schema.py
tests/models/: __init__.py  test_catalog_models.py  test_platform_models.py
tests/repositories/: __init__.py  test_admin_catalog_repo.py  test_offer_repo.py  test_product_repo.py
tests/services/: __init__.py  test_admin_catalog_service.py  test_agent_service.py  test_offer_service.py  test_product_service.py  test_s3_service.py
